--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Title</title>
   <link rel="stylesheet" href="css/style.min.css">
 <!--  <script>-->
@@ -20,7 +21,13 @@
   </header>
   <main>
     <p>main</p>
+    <svg width="500" height="500"><use xlink:href="img/sprite-svg.svg#icon-smartwatch"></use></svg>
+    <svg class="functions__svg" width="28" height="30"><use xlink:href="img/sprite-svg.svg#icon-siren"></use></svg>
+    <div class="eagle-final"></div>
+    <div class="rage_ru"></div>
+    <p><img src="img/ZDqE7mFBNw8.jpg" alt="" width="602" height="697"></p>
   </main>
   <footer>footer</footer>
+  <script src="js/script.min.js"></script>
 </body>
 </html>
