--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="date=no">
+  <meta name="format-detection" content="address=no">
+  <meta name="format-detection" content="email=no">
+  <meta content="notranslate" name="google">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
+  <title>Главная</title>
+  <meta name="description" content="">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-  <header>
-    <h1>head</h1>
+  <header class="page-header">
+    <p>хедер</p>
   </header>
-  <main>
-    <p>main</p>
-  </main>
-  <footer>footer</footer>
+  <p>Содержимое</p>
+  <footer class="page-footer">
+    <p>подвал</p>
+  </footer>
+  <script src="js/script.min.js"></script>
 </body>
+
 </html>
